tracker class update